# libmsa2d

./: .gitignore  CMakeLists.txt  package.xml
include/msa2d/Detect/: line_segment.hpp
include/msa2d/Filter/: outlier_filter.hpp  voxelgrid_filter.h
include/msa2d/Map/: GridMapBase.hpp  GridMapImpl.hpp  GridMapPyramid.h  OccGridCell.hpp  OccGridCellOperate.hpp  OccGridCnt.hpp  OccGridLogOdd.hpp  OccGridMapBase.hpp  OccGridMapImpl.hpp  OccGridMapOperation.hpp  OccGridMapPyramid.h  TimedSlidingLocalMap.h
include/msa2d/ScanMatcher/: correlative_scan_matcher_2d.h  fast_correlative_scan_matcher_2d.h  hectorScanMatcher.h  imls_icp.h
include/msa2d/Sensor/: LaserPointContainer.h  SensorData.hpp  point_cloud.hpp
include/msa2d/common/: Pose2d.hpp  UtilFunctions.hpp  color.hpp  tic_toc.h
include/robo2d/Filter/: outlier_filter.hpp  voxelgrid_filter.h
include/robo2d/Map/: GridMapBase.hpp  GridMapImpl.hpp  OccGridCnt.hpp  OccGridLogOdd.hpp  OccGridMapBase.hpp  OccGridMapImpl.hpp  OccGridMapPyramid.h  TimedSlidingLocalMap.h
include/robo2d/ScanMatcher/: correlative_scan_matcher_2d.h  fast_correlative_scan_matcher_2d.h  hectorScanMatcher.h  imls_icp.h
include/robo2d/Sensor/: SensorData.hpp  point_cloud.hpp
include/robo2d/common/: Pose2d.hpp  UtilFunctions.hpp  color.hpp  tic_toc.h
include/robo2d/ipc/: DataDispatcher.hpp
src/Filter/: voxelgrid_filter.cpp
src/Map/: GridMapPyramid.cpp  OccGridMapPyramid.cpp  TimedSlidingLocalMap.cpp
src/ScanMatcher/: correlative_scan_matcher_2d.cpp  fast_correlative_scan_matcher_2d.cpp  hectorScanMatcher.cpp  imls_icp.cpp
src/test/: test_csm_grid.cpp
